# axum_sqlx-site-template

./: Cargo.toml  README.md
modals/: modals.txt
scripts/: install.sql  rust.txt  serv.conf  sync.sh
src/: app.rs  cli.rs  conf.rs  handlers.rs  http_wraper.rs  main.rs  modals.rs  response.rs  service.rs  wechat.rs
templates/: 404.html
